feat : Un exemple de configuration de webpack qui fonctionne avec bootstrap : javascript et css fonctionne correctement.

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/expression-language": "7.1.*",
         "symfony/flex": "^2",
         "symfony/form": "7.1.*",
-        "symfony/framework-bundle": "7.1.*",
+        "symfony/framework-bundle": "6.4.*",
         "symfony/http-client": "7.1.*",
         "symfony/intl": "7.1.*",
         "symfony/mailer": "7.1.*",
@@ -34,7 +34,7 @@
         "symfony/runtime": "7.1.*",
         "symfony/security-bundle": "7.1.*",
         "symfony/serializer": "7.1.*",
-        "symfony/stimulus-bundle": "*",
+        "symfony/stimulus-bundle": "^2.18",
         "symfony/string": "7.1.*",
         "symfony/translation": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
