--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@hotwired/stimulus": "^3.2.2"
+        "@hotwired/stimulus": "^3.2.2",
+        "bootstrap-icons": "^1.11.3"
     }
 }
